[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "hydroxai"
version = "0.1.1"
description = "HydroxAI SDK for compliance scanning and chatbot evaluation"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "HydroxAI", email = "support@hydrox.ai" }
]
keywords = ["hydroxai", "sdk", "compliance", "chatbot", "evaluation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "tqdm>=4.60.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
  "playwright>=1.40.0",
  "rich>=13.0.0",
  "PyYAML>=6.0.0",
  "requests>=2.28.0"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0", 
  "pytest-mock>=3.10.0"
]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0"
]

[project.urls]
Homepage = "https://github.com/juhengwu/chatbotEvaluator"
Issues = "https://github.com/juhengwu/chatbotEvaluator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hydroxai"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/hydroxai"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
